--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,10 @@ dependencies {
     //implementation 'com.ibroadlink:BLSFamilyAndroid:1.0.+' // blsfamily
     implementation(name: 'blsfamily-debug', ext: 'aar')
 
+    //implementation 'com.ibroadlink:BLSWebSocketAndroid:1.0.2' // blwebsocket
+    implementation(name: 'blwebsocket-debug', ext: 'aar')
+    implementation 'org.java-websocket:Java-WebSocket:1.3.9'
+
     implementation 'com.ibroadlink:BLLetPluginAndroid:2.7.2' // plugin
 
     implementation 'com.android.support:support-v4:28.0.0'
