--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -297,6 +297,14 @@
         <activity
             android:name=".activity.space.SpaceManageActivity"
             android:theme="@style/ActivityStyle"/>
+
+        <activity
+            android:name=".activity.h5.CommonH5Activity"
+            android:theme="@style/ActivityStyle"/>
+        
+        <activity
+            android:name=".activity.account.TestAgreementSignedActivity"
+            android:theme="@style/ActivityStyle"/>
     </application>
 
 </manifest>
