--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,11 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
-        versionName "1.3.8"
+        versionName "1.3.9"
         flavorDimensions "default"
 
         ndk {
-            abiFilters 'armeabi'
+            abiFilters 'armeabi',"armeabi-v7a","arm64-v8a"
             moduleName "app"
         }
 
@@ -130,7 +130,9 @@ dependencies {
     implementation 'com.aliyun.ams:alicloud-android-push:3.1.4'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation 'net.zetetic:android-database-sqlcipher:4.2.0'
     implementation project(path: ':picSelector')
+    
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
