--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,50 +74,14 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-//    // normal start
-//    implementation 'com.ibroadlink:BLLetCoreAndroid:2.13.17.beta'
-//    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.8'
-//    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.11.+'
-//    implementation 'com.ibroadlink:BLLetBaseAndroid:2.11.+' 
-//    implementation 'com.ibroadlink:BLSFamilyAndroid:1.0.5+'
-//    implementation 'com.ibroadlink:BLLetPluginAndroid:2.7.2'
-//    implementation 'com.ibroadlink:BLLetFamilyAndroid:2.8.+'
-//    // normal end
-
-
-    // fot local debug start
-    //implementation fileTree(include: ['*.aar'], dir: 'libs')
-
-    //implementation 'com.ibroadlink:BLLetCoreAndroid:2.13.17.beta' // core
-    implementation(name: 'dnasdk-debug', ext: 'aar') 
-
-    implementation 'com.ibroadlink:BLLetBaseAndroid:2.13.+' // base
-    //implementation(name: 'blbase-debug', ext: 'aar')
-
-    //implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.10' // account
-    implementation(name: 'blaccount-debug', ext: 'aar')
-
-    //implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.11.+' // ircode
-    implementation(name: 'ircode-debug', ext: 'aar')
-
-    //implementation 'com.ibroadlink:BLLetFamilyAndroid:2.8.+' // family
-    implementation(name: 'blfamily-debug', ext: 'aar')
-
-    //implementation 'com.ibroadlink:BLSFamilyAndroid:1.0.+' // blsfamily
-    implementation(name: 'blsfamily-debug', ext: 'aar')
-
-    //implementation 'com.ibroadlink:BLSWebSocketAndroid:1.0.2' // blwebsocket
-    implementation(name: 'blwebsocket-debug', ext: 'aar')
-    implementation 'org.java-websocket:Java-WebSocket:1.3.9'
-
-    implementation 'com.ibroadlink:BLLetPluginAndroid:2.7.2' // plugin
-
-    implementation 'com.android.support:support-v4:28.0.0'
-    configurations {
-        all*.exclude group :'com.ibroadlink',  module :'BLLetCoreAndroid'
-        //all*.exclude group :'com.ibroadlink',  module :'BLLetBaseAndroid' // 如果不使用aar，注释这一句
-    }
-    // fot local debug end
+    implementation 'com.ibroadlink:BLLetCoreAndroid:2.14.10' // core
+    implementation 'com.ibroadlink:BLLetAccountAndroid:2.13.2' // account
+    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.14.4' // ircode
+    implementation 'com.ibroadlink:BLLetBaseAndroid:2.13.4'  // base
+    implementation 'com.ibroadlink:BLSFamilyAndroid:1.0.5' // blsfamily
+    implementation 'com.ibroadlink:BLLetPluginAndroid:2.7.4' // plugin
+    implementation 'com.ibroadlink:BLLetFamilyAndroid:2.8.3' // family
+    implementation 'com.ibroadlink:BLSWebSocketAndroid:1.0.4' // blwebsocket
 
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -132,7 +96,6 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.1.71.android'
     implementation 'net.zetetic:android-database-sqlcipher:4.2.0'
     implementation project(path: ':picSelector')
-    
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
